<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ActivationActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_margin"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/colorAccent"
                android:layout_gravity="start"
                android:text="@string/active_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/common_margin"
                android:hint="@string/app_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={appId}"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/sdk_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={sdkKey}"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/active_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={activeKey}"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_gravity="start"
                android:text="@string/notice_active_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:text="@string/read_local_config_and_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="readLocalConfigAndActive"/>
                <Button
                    android:text="@string/active_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="activeOnline"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="@dimen/common_margin"
                android:textColor="@color/colorAccent"
                android:layout_gravity="start"
                android:text="@string/active_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="@dimen/common_margin"
                android:layout_gravity="start"
                android:text="@{@string/notice_active_offline(@string/active_file_name)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/active_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="activeOffline"/>
            <TextView
                android:layout_marginTop="@dimen/common_margin"
                android:textColor="@color/colorAccent"
                android:layout_gravity="start"
                android:text="@string/copy_device_finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="@dimen/common_margin"
                android:layout_gravity="start"
                android:text="@string/description_copy_device_finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/copy_device_finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="copyDeviceFinger"/>
        </LinearLayout>
    </ScrollView>
    <data>
        <variable
            name="appId"
            type="String" />
        <variable
            name="sdkKey"
            type="String" />
        <variable
            name="activeKey"
            type="String" />
    </data>
</layout>